# plause

./: ARCHITECTURE.md  Cargo.toml  LICENSE-MIT  MILESTONES.md  README.md
crates/plause/: Cargo.toml
crates/plause-events/: Cargo.toml
crates/plause-events/src/: event.rs  fixture.rs  lib.rs  tap.rs
crates/plause-host/: Cargo.toml
crates/plause-host/src/: discovery.rs  engine.rs  instance.rs  lib.rs  loader.rs  offline.rs  tap.rs
crates/plause-host/tests/: inspect_probe.rs
crates/plause-probe/: Cargo.toml
crates/plause-probe/src/: lib.rs
crates/plause/src/: main.rs
