[package]
name = "plause-events"
description = "Event vocabulary, fixture format, and event-tap format for the plause CLAP test host"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# This crate is the one plugin test suites depend on directly, so it stays
# dependency-light: serde + serde_json and nothing else.
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
