[package]
name = "plause-probe"
description = "A minimal CLAP plugin used as a controllable test subject for plause's integration tests"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
clack-plugin = { workspace = true }
clack-extensions = { workspace = true, features = ["clack-plugin"] }
